--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
+spring.jpa.properties.hibernate.search.backend.hosts=${SEARCH_HOSTS}
+spring.jpa.properties.hibernate.search.backend.username=${SEARCH_USERNAME}
+spring.jpa.properties.hibernate.search.backend.password=${SEARCH_PASSWORD}
+spring.jpa.properties.hibernate.search.backend.protocol=https
+
 spring.data.mongodb.uri=${MONGODB_URI}
