Save entity to analytics database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
+datasource.primary.jdbc-url=${DATASOURCE_URL}
+datasource.primary.username=${DATASOURCE_USERNAME}
+datasource.primary.password=${DATASOURCE_PASSWORD}
+datasource.analytics.jdbc-url=${ANALYTICS_URL}
+datasource.analytics.username=${ANALYTICS_USERNAME}
+datasource.analytics.password=${ANALYTICS_PASSWORD}
 spring.jpa.open-in-view=false
 
 spring.jpa.properties.hibernate.search.backend.hosts=${SEARCH_HOSTS}
