Send and receive events

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.properties.hibernate.search.backend.password=${SEARCH_PASSWORD}
 spring.jpa.properties.hibernate.search.backend.protocol=https
 
 spring.data.mongodb.uri=${MONGODB_URI}
+
+spring.rabbitmq.host=${RABBIT_HOST}
+spring.rabbitmq.virtual-host=${RABBIT_VIRTUAL_HOST}
+spring.rabbitmq.username=${RABBIT_USERNAME}
+spring.rabbitmq.password=${RABBIT_PASSWORD}
